--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
-    "typescript": "5.9"
+    "typescript": "5.9",
+    "vitest": "^4.0.5"
   }
 }
