--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
+    "@types/node": "^24.9.2",
     "typescript": "5.9",
     "vitest": "^4.0.5"
   }
