--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
     "@types/node": "^24.9.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "^9.38.0",
+    "eslint-plugin-import": "^2.32.0",
     "typescript": "5.9",
+    "typescript-eslint": "^8.46.2",
     "vitest": "^4.0.5"
   }
 }
