--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/node": "^24.9.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
     "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.4.0",
     "typescript": "5.9",
     "typescript-eslint": "^8.46.2",
     "vitest": "^4.0.5"
