--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "side-context-mcp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "Local MCP server for shared task context",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "build": "tsc",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "\"test:watch\"": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +25,10 @@
     "typescript": "5.9",
     "typescript-eslint": "^8.46.2",
     "vitest": "^4.0.5"
+  },
+  "type": "module",
+  "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=24"
   }
 }
